# University-Timetabling-Problem-Solution

./: CMakeLists.txt  Horarios EneAbr18.xlsx  README.md  compilar.sh  datos_disponibilidad.xlsx  datos_universidad.xlsx  ejecutar_interfaz.py  generar_grafo.py  reporte_conflictos.txt  test_backtracking.py  test_grafo.py  test_modulo.py
src/: __init__.py
src/algoritmo/: __init__.py  arbol_decisiones.py  backtracking.py  estadisticas.py  heuristicas.py  restricciones.py  visualizador_arbol.py
src/core/: __init__.py  analizador_grafo.py  backend_cpp.py  config.py  grafo_conflictos.py  modelos.py
src/cpp/: main.cpp
src/cpp/algoritmo/: arbol_decisiones.cpp  arbol_decisiones.h  backtracking.cpp  backtracking.h  heuristicas.cpp  heuristicas.h  restricciones.cpp  restricciones.h
src/cpp/core/: config.cpp  config.h  grafo_conflictos.cpp  grafo_conflictos.h  modelos.cpp  modelos.h
src/cpp/utils/: json_io.cpp  json_io.h
src/data/: __init__.py  generador_excel_resultado.py  generador_tabla.py  lector_excel.py  validador.py
src/interfaz/: __init__.py  estilos.py  main.py  pantalla_bienvenida.py  pantalla_generando.py  pantalla_resultados.py  pantalla_validacion.py
src/visualization/: __init__.py  visualizador_grafo.py
